--- a/css/tailwind.css
+++ b/css/tailwind.css
@@ -149,6 +149,36 @@ html.dark .overflow-y-auto::-webkit-scrollbar-thumb {
   background-color: rgba(255, 255, 255, 0.5);
 }
 
+/* Personnalisation de la scrollbar horizontale */
+
+/* La barre de défilement horizontale */
+.container-scrollbar-horizontal::-webkit-scrollbar {
+  height: 8px; /* Hauteur de la barre horizontale */
+}
+
+/* Pour mobile et écrans étroits */
+@media (max-width: 768px) {
+  .container-scrollbar-horizontal::-webkit-scrollbar {
+    height: 2px; /* Hauteur plus petite pour les écrans mobiles */
+  }
+}
+
+/* La piste de la barre de défilement */
+.container-scrollbar-horizontal::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+/* Le "pouce" de la barre de défilement (partie déplaçable) */
+.container-scrollbar-horizontal::-webkit-scrollbar-thumb {
+  background-color: rgba(40, 27, 22, 0.5);
+  border-radius: 5px;
+}
+
+/* Option pour un thème sombre */
+html.dark .container-scrollbar-horizontal::-webkit-scrollbar-thumb {
+  background-color: rgba(255, 255, 255, 0.5);
+}
+
 /* https://stackoverflow.com/questions/61083813/how-to-avoid-internal-autofill-selected-style-to-be-applied */
 input:-webkit-autofill,
 input:-webkit-autofill:focus {
