--- a/css/tailwind.css
+++ b/css/tailwind.css
@@ -92,10 +92,19 @@ html.dark body {
 }
 
 .fancybox-wrapper {
+  /* cursor: pointer;  */
   position: relative; /* Nécessaire pour Next.js avec layout="intrinsic" */
   display: block; /* Évite les problèmes d'alignement */
   max-width: 100%; /* Empêche l'image de dépasser la largeur du conteneur */
   margin: 0 auto; /* Centrage si nécessaire */  
+}
+
+.fancybox-wrapper img {
+  pointer-events: auto; 
+}
+
+.fancybox__image {
+  pointer-events: auto; /* Assure que l'image reste interactive */
 }
 
 @media (max-width: 768px) {
